--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,7 @@
 
 /* css */
-body {font-family: "Roboto";}
+body {font-family: "Roboto";
+background-color: rgb(214,221, 239);}
 
 h1 {
   text-align: center;
