--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,12 @@ h1 {
   text-align: center;
 }
 
+.reccomendations {
+  display: block;
+margin-left: auto;
+margin-right: auto;
+}
+
 #image {
   display: block;
 margin-left: auto;
@@ -17,290 +23,3 @@ h3 {
   text-align: center;
   font-weight: bold;
 }
-
-/* Find Games */
-
-position: absolute;
-width: 291px;
-height: 30px;
-
-
-
-/* Rectangle 8 */
-
-position: absolute;
-width: 30px;
-height: 30px;
-
-background: #FFFFFF;
-border: 1px solid #000000;
-box-sizing: border-box;
-
-
-/* F */
-
-position: absolute;
-width: 26px;
-height: 26px;
-
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 31px;
-line-height: 36px;
-display: flex;
-align-items: center;
-text-align: center;
-
-color: #000000;
-
-
-
-/* Rectangle 13 */
-
-position: absolute;
-width: 30px;
-height: 30px;
-
-background: #FFFFFF;
-border: 1px solid #000000;
-box-sizing: border-box;
-
-
-/* G */
-
-position: absolute;
-width: 26px;
-height: 26px;
-
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 31px;
-line-height: 36px;
-display: flex;
-align-items: center;
-text-align: center;
-
-color: #000000;
-
-
-
-/* Rectangle 12 */
-
-position: absolute;
-width: 30px;
-height: 30px;
-
-background: #000000;
-border: 1px solid #000000;
-box-sizing: border-box;
-
-
-/* Rectangle 9 */
-
-position: absolute;
-width: 30px;
-height: 30px;
-
-background: #FFFFFF;
-border: 1px solid #000000;
-box-sizing: border-box;
-
-
-/* I */
-
-position: absolute;
-width: 26px;
-height: 26px;
-
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 31px;
-line-height: 36px;
-display: flex;
-align-items: center;
-text-align: center;
-
-color: #000000;
-
-
-
-/* Rectangle 10 */
-
-position: absolute;
-width: 30px;
-height: 30px;
-
-background: #FFFFFF;
-border: 1px solid #000000;
-box-sizing: border-box;
-
-
-/* N */
-
-position: absolute;
-width: 26px;
-height: 26px;
-
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 31px;
-line-height: 36px;
-display: flex;
-align-items: center;
-text-align: center;
-
-color: #000000;
-
-
-
-/* Rectangle 11 */
-
-position: absolute;
-width: 30px;
-height: 30px;
-
-background: #FFFFFF;
-border: 1px solid #000000;
-box-sizing: border-box;
-
-
-/* D */
-
-position: absolute;
-width: 26px;
-height: 26px;
-
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 31px;
-line-height: 36px;
-display: flex;
-align-items: center;
-text-align: center;
-
-color: #000000;
-
-
-
-/* Rectangle 16 */
-
-position: absolute;
-width: 30px;
-height: 30px;
-
-background: #FFFFFF;
-border: 1px solid #000000;
-box-sizing: border-box;
-
-
-/* E */
-
-position: absolute;
-width: 26px;
-height: 26px;
-
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 31px;
-line-height: 36px;
-display: flex;
-align-items: center;
-text-align: center;
-
-color: #000000;
-
-
-
-/* Rectangle 17 */
-
-position: absolute;
-width: 30px;
-height: 30px;
-
-background: #FFFFFF;
-border: 1px solid #000000;
-box-sizing: border-box;
-
-
-/* S */
-
-position: absolute;
-width: 26px;
-height: 26px;
-
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 31px;
-line-height: 36px;
-display: flex;
-align-items: center;
-text-align: center;
-
-color: #000000;
-
-
-
-/* Rectangle 14 */
-
-position: absolute;
-width: 30px;
-height: 30px;
-
-background: #FFFFFF;
-border: 1px solid #000000;
-box-sizing: border-box;
-
-
-/* A */
-
-position: absolute;
-width: 26px;
-height: 26px;
-
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 31px;
-line-height: 36px;
-display: flex;
-align-items: center;
-text-align: center;
-
-color: #000000;
-
-
-
-/* Rectangle 15 */
-
-position: absolute;
-width: 30px;
-height: 30px;
-
-background: #FFFFFF;
-border: 1px solid #000000;
-box-sizing: border-box;
-
-
-/* M */
-
-position: absolute;
-width: 26px;
-height: 26px;
-
-font-family: Roboto;
-font-style: normal;
-font-weight: normal;
-font-size: 31px;
-line-height: 36px;
-display: flex;
-align-items: center;
-text-align: center;
-
-color: #000000;
